# CPP-SFML-SAPER

./: CMakeLists.txt  Plansza.cpp  Plansza.h  Pole.cpp  Pole.h  README.md  main.cpp
SaperDeluxe-build/: 242016.cbp  CMakeCache.txt  Makefile  READMEPLS.txt  cmake_install.cmake
